# HECS

./: .gitignore  CMakeLists.txt  CMakePresets.json  dependencies.cmake  setup.bat
.github/workflows/: ci.yml
Benchmark/: CMakeLists.txt  main.cpp
Benchmark/src/: main.cpp
HECS/: CMakeLists.txt
HECS/Core/: Component.h  ComponentArray.h  ComponentManager.h  Entity.h  EntityID.h  EntityView.h  Resource.h  System.h  World.h
Test/: CMakeLists.txt
Test/src/: Test.cpp
include/: CMakeLists.txt
include/HECS/: CMakeLists.txt
include/HECS/Core/: ComponentArray.h  World.h
